--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>HelloTodo</h1>
 
-        <p>This simple todo list backend and web app were created using StrongLoop and Bluemix Mobile Services. Follow the onscreen guided experience to get started.</p>
+        <p>Follow the onscreen guided experience to get started.</p>
     </header>
     <div class="container">
         <div id="InfoBox">
